# lpr-plus

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.cfg
docker/: Dockerfile
examples/: r.sh  small.c
src/lpr_plus/: __init__.py  benchmark.py  catalog.py  cli.py  code_extract.py  doctor.py  oracle.py  provider.py  reducer.py  summarize.py  token_counter.py  utils.py
src/lpr_plus/data/: base-transformations.json  generalized-transformations.json  refined-transformations.json
tests/: test_catalog.py  test_cli.py
