[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lpr-plus"
version = "0.1.0"
description = "LPR+ program-reduction CLI and reproducible benchmark wrapper for the LPR artifact."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "LPR+ Contributors" }
]
keywords = ["program reduction", "debugging", "llm", "benchmark", "lpr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/lpr-plus/lpr-plus"
Issues = "https://github.com/lpr-plus/lpr-plus/issues"

[project.scripts]
lpr-plus = "lpr_plus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lpr_plus = ["data/*.json"]

