[metadata]
name = lpr-plus
version = 0.1.0
description = LPR+ program-reduction CLI and reproducible benchmark wrapper for the LPR artifact.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = LPR+ Contributors
keywords = program reduction, debugging, llm, benchmark, lpr
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
lpr_plus = data/*.json

[options.entry_points]
console_scripts =
    lpr-plus = lpr_plus.cli:main

